--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
+node_modules/
+app/node_modules/
+.env
+.env.local
+npm-debug.log*
+yarn-debug.log*
+.DS_Store
+.vscode/
+.idea/
+coverage/
+dist/
+/*.tgz
+/.workspaces
 app/node_modules
 .vscode
