--- a/app/package.json
+++ b/app/package.json
@@ -2,10 +2,16 @@
   "name": "multi-container-apps",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon -e js,ejs server.js"
+    "dev": "nodemon -e js,ejs server.js",
+    "smoke": "node scripts/smoke.js",
+    "lint": "eslint . --ext .js || true",
+    "format": "prettier --write '**/*.js'",
+    "test": "jest --runInBand",
+    "test:ci": "jest --runInBand --coverage --coverageDirectory=coverage",
+    "prepare": "node -e \"console.log('skipping husky install in subpackage')\""
   },
   "author": "",
   "license": "ISC",
@@ -18,7 +24,34 @@
   },
   "devDependencies": {
     "connect-livereload": "^0.6.1",
+    "eslint": "^8.50.0",
+    "jest": "^29.6.1",
     "livereload": "^0.9.3",
-    "nodemon": "^3.0.1"
+    "mongodb-memory-server": "^10.4.1",
+    "nodemon": "^3.0.1",
+    "prettier": "^2.8.8",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.0",
+    "supertest": "^6.3.3"
+  }
+  ,"husky": {
+    "hooks": {}
+  },
+  "lint-staged": {
+    "**/*.{js,ejs}": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "jest": {
+    "coverageThreshold": {
+      "global": {
+        "branches": 38,
+        "functions": 45,
+        "lines": 70,
+        "statements": 70
+      }
+    }
   }
 }
